--- a/foottball-lobby/app/src/main/res/layout/fragment_start.xml
+++ b/foottball-lobby/app/src/main/res/layout/fragment_start.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#C8C8C8"
     tools:context=".fragments.StartFragment">
 
     <ImageView
