--- a/foottball-lobby/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/foottball-lobby/app/src/main/res/layout/fragment_forgot_password.xml
@@ -48,13 +48,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
         android:layout_marginTop="150dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
         android:inputType="textMultiLine"
+        android:minHeight="48dp"
         android:text="We will send you an email with instructions on how to reset your password."
-        android:textSize="20sp"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
