--- a/foottball-lobby/app/src/main/res/layout/fragment_profile.xml
+++ b/foottball-lobby/app/src/main/res/layout/fragment_profile.xml
@@ -160,6 +160,8 @@
         android:id="@+id/deleteProfileBtn"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
         android:layout_weight="1"
         android:text="Delete Profile"
         android:textColor="#FF0000"
@@ -174,7 +176,8 @@
         android:id="@+id/editProfileBtn"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
         android:layout_weight="1"
         android:text="Edit Profile"
         android:textSize="14sp"
