--- a/foottball-lobby/app/src/main/res/layout/fragment_registration.xml
+++ b/foottball-lobby/app/src/main/res/layout/fragment_registration.xml
@@ -143,13 +143,13 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Register"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
+            app:layout_constraintBottom_toTopOf="@+id/alreadyRegisterdTxt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/aboutMeEdt"/>
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/alreadyRegisterdTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Already have an account?"
@@ -163,10 +163,10 @@
             android:layout_height="wrap_content"
             android:text="Log in"
             android:textColor="#2196F3"
-            app:layout_constraintEnd_toEndOf="@+id/textView"
+            app:layout_constraintEnd_toEndOf="@+id/alreadyRegisterdTxt"
             app:layout_constraintHorizontal_bias="0.528"
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintStart_toStartOf="@+id/alreadyRegisterdTxt"
+            app:layout_constraintTop_toBottomOf="@+id/alreadyRegisterdTxt" />
 
         <TextView
             android:id="@+id/validationErrorsTxt"
