--- a/foottball-lobby/app/src/main/res/navigation/navigation_graph.xml
+++ b/foottball-lobby/app/src/main/res/navigation/navigation_graph.xml
@@ -45,6 +45,9 @@
         <action
             android:id="@+id/action_profileFragment_to_startFragment"
             app:destination="@id/startFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_registrationFragment"
+            app:destination="@id/registrationFragment" />
     </fragment>
     <fragment
         android:id="@+id/startFragment"
