--- a/foottball-lobby/app/src/main/res/navigation/navigation_graph.xml
+++ b/foottball-lobby/app/src/main/res/navigation/navigation_graph.xml
@@ -36,7 +36,11 @@
         android:id="@+id/forgotPasswordFragment"
         android:name="com.example.football_lobby.fragments.ForgotPasswordFragment"
         android:label="fragment_forgot_password"
-        tools:layout="@layout/fragment_forgot_password" />
+        tools:layout="@layout/fragment_forgot_password" >
+        <action
+            android:id="@+id/action_forgotPasswordFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.football_lobby.fragments.ProfileFragment"
