find lobby and create lobby screens created

--- a/foottball-lobby/app/src/main/res/menu/top_app_bar_menu.xml
+++ b/foottball-lobby/app/src/main/res/menu/top_app_bar_menu.xml
@@ -12,4 +12,9 @@
             android:id="@+id/deleteProfileItem"
             android:title="Delete Profile" />
     </group>
+    <group android:id="@+id/goToProfileGroup">
+        <item
+            android:id="@+id/profileItem"
+            android:title="Profile" />
+    </group>
 </menu>
